--- a/autokeras_text_classifier.ipynb
+++ b/autokeras_text_classifier.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "gpuType": "V100",
-      "authorship_tag": "ABX9TyOwq0q6uiuWYL2Z6L847g0g"
+      "gpuType": "A100",
+      "authorship_tag": "ABX9TyOiXgIxwDhkXREdUGRBSygm",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -18,6 +19,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/pocketmax/skull-ship/blob/main/autokeras_text_classifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -32,11 +43,27 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "2qQUHDQw5Itc"
+        "id": "2qQUHDQw5Itc",
+        "outputId": "106aba96-b54d-425d-b5a8-8b31395e375a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+            "\u001b[0m"
+          ]
+        }
+      ],
       "source": [
-        "!pip install autokeras"
+        "!pip install --upgrade pip\n",
+        "!pip install autokeras\n",
+        "!nvidia-smi\n",
+        "!pip install tensorflow[and-cuda]"
       ]
     },
     {
@@ -53,9 +80,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pVFsjNcQ5QOM",
-        "outputId": "aacb0f9c-37f9-4622-b97f-3ef5a52d1391"
+        "outputId": "e94aaa61-3247-4e53-9bc5-59efc89c8cc8"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,77 +110,57 @@
         ")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Rpe9izFu5bLi",
-        "outputId": "5aed8795-5994-4a11-942a-746b2982b8c8"
+        "id": "Rpe9izFu5bLi"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading data from http://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\n",
-            "84125825/84125825 [==============================] - 16s 0us/step\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# train_data.data is a list\n",
-        "train = np.array(train_data.data)\n",
-        "test = np.array(test_data.data)\n",
+        "skip=6000\n",
+        "x_train = np.array(train_data.data[:skip])\n",
+        "y_train = np.array(train_data.target[:skip])\n",
+        "x_test = np.array(test_data.data[:skip])\n",
+        "y_test = np.array(test_data.target[:skip])\n",
+        "# test = np.array(test_data.data[:6000])\n",
         "# y_test = np.array(test_data.target) TODO: why was it like this?\n",
-        "\n",
-        "print(\"train shape:\", train.shape)\n",
-        "print(\"test shape:\", test.shape)\n"
+        "\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2NQAE7EdA3h7",
-        "outputId": "6086156d-40b7-41af-946c-ae2be53f14d7"
+        "id": "2NQAE7EdA3h7"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "train shape: (25000,)\n",
-            "test shape: (25000,)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# TODO: What does max_trials mean?\n",
         "clf = ak.TextClassifier(\n",
-        "    # overwrite=True,\n",
-        "    # max_trials=1\n",
+        "    overwrite=True,\n",
+        "    max_trials=1\n",
         ")\n",
-        "clf.fit(\n",
-        "    x=train,\n",
-        "    y=test,\n",
-        "    # steps_per_epoch=32,\n",
-        "    batch_size=16,\n",
-        "    # epochs=10\n",
-        ")\n",
-        "print(clf.evaluate(x=train, y=test))\n"
+        "clf.fit(x=x_train, y=y_train, epochs=20)\n"
       ],
       "metadata": {
+        "id": "b5Rz5kfT5iSM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(clf.evaluate(x=x_test, y=y_test))\n"
+      ],
+      "metadata": {
+        "id": "rK8JEaej9YLV",
+        "outputId": "8f6b8d83-ab0e-4137-b7b4-ab337fcb3a1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "b5Rz5kfT5iSM",
-        "outputId": "387bc860-7ff5-4648-bf39-369ae9e34340"
+        }
       },
       "execution_count": null,
       "outputs": [
@@ -161,49 +168,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Trial 2 Complete [00h 06m 12s]\n",
-            "val_loss: 10.6158447265625\n",
-            "\n",
-            "Best val_loss So Far: 10.570926666259766\n",
-            "Total elapsed time: 00h 11m 52s\n",
-            "\n",
-            "Search: Running Trial #3\n",
-            "\n",
-            "Value             |Best Value So Far |Hyperparameter\n",
-            "bert              |vanilla           |text_block_1/block_type\n",
-            "0                 |0                 |classification_head_1/dropout\n",
-            "adam_weight_decay |adam              |optimizer\n",
-            "2e-05             |0.001             |learning_rate\n",
-            "512               |None              |text_block_1/bert_block_1/max_sequence_length\n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Downloading from https://www.kaggle.com/api/v1/models/keras/bert/keras/bert_base_en_uncased/2/download/tokenizer.json...\n",
-            "100%|██████████| 547/547 [00:00<00:00, 819kB/s]\n",
-            "Downloading from https://www.kaggle.com/api/v1/models/keras/bert/keras/bert_base_en_uncased/2/download/assets/tokenizer/vocabulary.txt...\n",
-            "100%|██████████| 226k/226k [00:00<00:00, 683kB/s]\n",
-            "Downloading from https://www.kaggle.com/api/v1/models/keras/bert/keras/bert_base_en_uncased/2/download/config.json...\n",
-            "100%|██████████| 510/510 [00:00<00:00, 592kB/s]\n",
-            "Downloading from https://www.kaggle.com/api/v1/models/keras/bert/keras/bert_base_en_uncased/2/download/model.weights.h5...\n",
-            "100%|██████████| 418M/418M [00:11<00:00, 36.7MB/s]\n",
-            "/usr/local/lib/python3.10/dist-packages/keras_nlp/src/models/backbone.py:46: UserWarning: `Model.state_updates` will be removed in a future version. This property should not be used in TensorFlow 2.0, as `updates` are applied automatically.\n",
-            "  return id(getattr(self, attr)) not in self._functional_layer_ids\n",
-            "/usr/local/lib/python3.10/dist-packages/keras_nlp/src/models/backbone.py:46: UserWarning: `layer.updates` will be removed in a future version. This property should not be used in TensorFlow 2.0, as `updates` are applied automatically.\n",
-            "  return id(getattr(self, attr)) not in self._functional_layer_ids\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 1/1000\n",
-            "Not enough memory, reduce batch size to 8.\n",
-            "Epoch 1/1000\n",
-            "   1704/Unknown - 629s 361ms/step - loss: 10.1198 - accuracy: 0.0000e+00"
+            "188/188 [==============================] - 1s 4ms/step - loss: 0.6809 - accuracy: 0.8868\n",
+            "[0.6809044480323792, 0.8868333101272583]\n"
           ]
         }
       ]
@@ -211,70 +177,44 @@
     {
       "cell_type": "code",
       "source": [
-        "clf.predict(np.array([\"it was amazing! the acting was perfect!\"]))"
+        "clf.predict(np.array([\n",
+        "    \"that movie sucked. it didn't have enough special effects\", #0\n",
+        "    \"that movie was the best. I loved the acting\", #1\n",
+        "    \"it wasn't that good. i hated it totally. I liked some parts but I didn't like the rest\", #0\n",
+        "    \"it was a crappy movie by far. it was terrible\" #0\n",
+        "]))\n"
       ],
       "metadata": {
-        "id": "zzgV_Yzz0yZy"
+        "id": "zzgV_Yzz0yZy",
+        "outputId": "a01ed363-cf96-45d6-b348-d889a52761a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "input_node = ak.TextInput()\n",
-        "output_node = ak.TextBlock(block_type=\"ngram\")(input_node)\n",
-        "output_node = ak.ClassificationHead()(output_node)\n",
-        "clf = ak.AutoModel(\n",
-        "    inputs=input_node, outputs=output_node, overwrite=True, max_trials=1\n",
-        ")\n",
-        "clf.fit(train, test, epochs=2)\n"
-      ],
-      "metadata": {
-        "id": "vqfIrfxn5xX3"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "input_node = ak.TextInput()\n",
-        "output_node = ak.TextToIntSequence()(input_node)\n",
-        "output_node = ak.Embedding()(output_node)\n",
-        "# Use separable Conv layers in Keras.\n",
-        "output_node = ak.ConvBlock(separable=True)(output_node)\n",
-        "output_node = ak.ClassificationHead()(output_node)\n",
-        "clf = ak.AutoModel(\n",
-        "    inputs=input_node, outputs=output_node, overwrite=True, max_trials=1\n",
-        ")\n",
-        "clf.fit(train, test, epochs=2)\n"
-      ],
-      "metadata": {
-        "id": "zD1k1WJg50lE"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "train_set = tf.data.Dataset.from_tensor_slices(((train,), (test,))).batch(32)\n",
-        "test_set = tf.data.Dataset.from_tensor_slices(((train,), (test,))).batch(32)\n",
-        "\n",
-        "clf = ak.TextClassifier(overwrite=True, max_trials=2)\n",
-        "# Feed the tensorflow Dataset to the classifier.\n",
-        "clf.fit(train_set, epochs=2)\n",
-        "# Predict with the best model.\n",
-        "predicted_y = clf.predict(test_set)\n",
-        "# Evaluate the best model with testing data.\n",
-        "print(clf.evaluate(test_set))\n"
-      ],
-      "metadata": {
-        "id": "11ayl1Wk54D_"
-      },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1/1 [==============================] - 0s 99ms/step\n",
+            "1/1 [==============================] - 0s 7ms/step\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.],\n",
+              "       [1.],\n",
+              "       [0.],\n",
+              "       [0.]], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
     }
   ]
 }
