--- a/autokeras_text_classifier.ipynb
+++ b/autokeras_text_classifier.ipynb
@@ -4,10 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "machine_shape": "hm",
-      "gpuType": "A100",
-      "authorship_tag": "ABX9TyOiXgIxwDhkXREdUGRBSygm",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOiXgIxwDhkXREdUGRBSygm"
     },
     "kernelspec": {
       "name": "python3",
@@ -15,20 +12,9 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/pocketmax/skull-ship/blob/main/autokeras_text_classifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -44,7 +30,7 @@
       "execution_count": null,
       "metadata": {
         "id": "2qQUHDQw5Itc",
-        "outputId": "106aba96-b54d-425d-b5a8-8b31395e375a",
+        "outputId": "95b08793-0f0d-4bef-d7f6-d50d22823f91",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -54,6 +40,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "  Attempting uninstall: tensorflow\n",
+            "    Found existing installation: tensorflow 2.15.0\n",
+            "    Uninstalling tensorflow-2.15.0:\n",
+            "      Successfully uninstalled tensorflow-2.15.0\n",
+            "Successfully installed nvidia-cublas-cu12-12.2.5.6 nvidia-cuda-cupti-cu12-12.2.142 nvidia-cuda-nvcc-cu12-12.2.140 nvidia-cuda-nvrtc-cu12-12.2.140 nvidia-cuda-runtime-cu12-12.2.140 nvidia-cudnn-cu12-8.9.4.25 nvidia-cufft-cu12-11.0.8.103 nvidia-curand-cu12-10.3.3.141 nvidia-cusolver-cu12-11.5.2.141 nvidia-cusparse-cu12-12.1.2.141 nvidia-nccl-cu12-2.16.5 nvidia-nvjitlink-cu12-12.2.140 tensorflow-2.15.0.post1\n",
             "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
             "\u001b[0m"
           ]
@@ -80,7 +71,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pVFsjNcQ5QOM",
-        "outputId": "e94aaa61-3247-4e53-9bc5-59efc89c8cc8"
+        "outputId": "ceb7ce0b-de53-49dd-bddc-6b8955113bc2"
       },
       "execution_count": null,
       "outputs": [
